[gd_scene load_steps=4 format=3 uid="uid://cy2wbjijuffrk"]

[ext_resource type="Texture2D" uid="uid://bq6yiww0t70d7" path="res://assets/img/background/cenario_1.png" id="1_ogdju"]
[ext_resource type="Script" path="res://levels.gd" id="1_peuav"]
[ext_resource type="FontFile" uid="uid://fu4hnjondoo6" path="res://assets/fonts/OLDLONDON.TTF" id="3_3rsjl"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_peuav")

[node name="Levels" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1556.11, 540)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("1_ogdju")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("3_3rsjl")
theme_override_font_sizes/font_size = 102
text = "world 1"
horizontal_alignment = 1

[node name="Level1" type="Button" parent="."]
layout_mode = 2
offset_left = 149.0
offset_top = 632.0
offset_right = 343.0
offset_bottom = 729.0
theme_override_fonts/font = ExtResource("3_3rsjl")
theme_override_font_sizes/font_size = 42
text = "Level 1"

[node name="Level2" type="Button" parent="."]
layout_mode = 2
offset_left = 567.0
offset_top = 290.0
offset_right = 761.0
offset_bottom = 387.0
theme_override_fonts/font = ExtResource("3_3rsjl")
theme_override_font_sizes/font_size = 42
disabled = true
text = "Level 2"

[node name="Level3" type="Button" parent="."]
layout_mode = 2
offset_left = 1005.0
offset_top = 662.0
offset_right = 1199.0
offset_bottom = 759.0
theme_override_fonts/font = ExtResource("3_3rsjl")
theme_override_font_sizes/font_size = 42
disabled = true
text = "Level 3"

[node name="Level4" type="Button" parent="."]
layout_mode = 2
offset_left = 1359.0
offset_top = 326.0
offset_right = 1553.0
offset_bottom = 423.0
theme_override_fonts/font = ExtResource("3_3rsjl")
theme_override_font_sizes/font_size = 42
disabled = true
text = "Level 4"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_level_4_pressed"]
